--- a/src/home.html
+++ b/src/home.html
@@ -3,13 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CC Floral Art: 花束</title>
     <link rel="stylesheet" href="styles.css">
+    <title>CC Floral Art: 花束</title>
 </head>
 <body>
-<h1>花束</h1>
 <main>
-    <div class="bouquet-container" id="bouquet-container">
+    <div id="default-view" class="view">
+        <h1>花束</h1>
+        <ul id="bouquet-list">
+        </ul>
+
+        <h2>添加花束</h2>
+        <form id="add-bouquet-form">
+            <div id="flower-list">
+                <label>Flower Options:</label>
+                <div class="flower-row">
+                    <select name="flower-type" class="flower-type">
+                        <option value="玫瑰">Roses</option>
+                        <option value="洋甘菊">Daisies</option>
+                        <option value="郁金香">Tulips</option>
+                    </select>
+                    <input type="number" class="flower-quantity" placeholder="数量" min="0" required>
+                    <button type="button" class="remove-flower">添加花</button>
+
+                    <h4>Flowers in Bouquet</h4>
+                    <ul id="flowers">
+
+                    </ul>
+                </div>
+            </div>
+            <label for="image">Upload Image:</label>
+            <input type="file" id="image" name="image" accept="image/*" required><br>
+            <button type="submit">加新的花束</button>
+        </form>
     </div>
 </main>
 </body>
